@@ -1,5 +1,12 @@
 2009-10-04  Karl Fogel  <kfogel@red-bean.com>
 
+	* bookmark.el (bookmark-alist): Document the new `handler' element
+	in the param alist.
+	(bookmark-make-record-function): Adjust documentation for above.
+	(Bug#4193)
+
+2009-10-04  Karl Fogel  <kfogel@red-bean.com>
+
 	* info.el (Info-bookmark-make-record): Document this function.
 	(Info-bookmark-jump): Document with a doc string, not just a comment.
 	(Bug#4203)
